# appmigrator

./: README.TXT  README.md  install_script.sh
AnjutaSource/: .anjuta_sym_db.db  Makefile.in  aclocal.m4  configure  configure.ac
AnjutaSource/.anjuta/: default.profile
AnjutaSource/.anjuta/session/: anjuta.session  dock-layout.xml
AnjutaSource/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
AnjutaSource/src/: Makefile.am  Makefile.in  appmigrator.ui  backupWindow.c  backupWindow.h  backupWindow.ui  common_gui_func.c  common_gui_func.h  functions.c  functions.h  main.c  main_header.h  restoreWindow.c  restoreWindow.h  restoreWindow.ui
backend-scripts/: installpkg.sh  listpkg.sh
